# MeowkitPy

./: MeowkitPy.sln  README.md
MeowkitPy/: MeowkitPy.pyproj  program.py  pyproject.toml  requirements.txt  setup.py
MeowkitPy/MeowkitPy/: __init__.py
MeowkitPy/MeowkitPy/data/: validation.py
MeowkitPy/MeowkitPy/logging/: logger.py
MeowkitPy/env-meowkit-py3.9/Scripts/: activate  activate.bat
SCM/: README.md  env.bat  package.bat  package.py  update_ver.bat
SCM/Package/: MeowkitPy-0.1.3-py3-none-any.whl
SCM/Package/Cache/: MeowkitPy-0.0.1-py3-none-any.whl  MeowkitPy-0.1.2-py3-none-any.whl  MeowkitPy-0.1.5-py3-none-any.whl
